traefik/templates/gitea-http-forward-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: gitea-http-forward
  namespace: gitea
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  redirectScheme:
    scheme: https
    permanent: true
