traefik/templates/argocd-ingress.yaml
### Generated by ansible :: demelopment.k3s.argocd@render_templates ###
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`cloud.yourdomain.test`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`cloud.yourdomain.test`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
