traefik/templates/duplicati-ingress.yaml
### Generated by ansible :: demelopment.k3s.argocd@render_templates ###
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: duplicati-ui
  namespace: duplicati
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`backup.yourdomain.test`)
      services:
        - name: duplicati
          port: 8200
