traefik/templates/gitea-http-ingress.yaml
### Generated by ansible :: demelopment.k3s.argocd@render_templates ###
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-ui-http
  namespace: gitea
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`git.yourdomain.test`)
      middlewares:
        - name: gitea-http-forward
      services:
        - kind: TraefikService
          name: noop@internal
