traefik/templates/gitea-https-ingress.yaml
### Generated by ansible :: demelopment.k3s.argocd@render_templates ###
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-ui-https
  namespace: gitea
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`git.yourdomain.test`)
      services:
        - name: gitea-http
          port: 3000
  tls:
    secretName: gitea-tls-secret
