traefik/templates/iobroker-ingress.yaml
### Generated by ansible :: demelopment.k3s.argocd@render_templates ###
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: iobroker-ui
  namespace: iobroker
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`smart.yourdomain.test`)
      services:
        - name: iobroker
          port: 8082
