traefik/templates/minio-ingress.yaml
### Generated by ansible :: demelopment.k3s.argocd@render_templates ###
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-s3
  namespace: minio
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`s3.yourdomain.test`)
      services:
        - name: minio
          port: 9000
    - kind: Rule
      match: Host(`bucket.yourdomain.test`)
      services:
        - name: minio
          port: 9001
