traefik/templates/pihole-ingress.yaml
### Generated by ansible :: demelopment.k3s.argocd@render_templates ###
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-ui
  namespace: pihole
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`dns.yourdomain.test`)
      services:
        - name: pihole-web
          port: 80
