traefik/templates/traefik-dashboard-ingress.yaml
### Generated by ansible :: demelopment.k3s.argocd@render_templates ###
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-public-ui
  namespace: traefik
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ingress.yourdomain.test`)
      kind: Rule
      middlewares:
        - name: dashboard-ingress-auth
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
